# Alprotein

./: .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  agent.md  check_duplicates.py  check_pigment_conformers.py  check_pigments.py  compare_pdb_formats.py  compare_residues.py  diagnose_charges.py  inspect_residue.py  pyproject.toml  test_gui_exciton_plots.py  test_none_parsing.py
Alprotein/: PR.md  __init__.py  gui_launcher.py  test_gui.py  test_imports.py
Alprotein.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Alprotein/calculators/: __init__.py  coupling_calculator.py  exciton_calculator.py  hamiltonian_calculator.py  site_energy_calculator.py  spectra_calculator.py
Alprotein/core/: __init__.py  abstract_pigments.py  constants.py  enhanced_atom.py  pigment_system.py  protein_structure.py
Alprotein/data/: __init__.py  parameters.py
Alprotein/gui/: __init__.py  app.py  app_pro.py  main_window.py  main_window_pro.py  styles.py  test_cdc_workflow.py  workbench_app.py  workbench_window.py
Alprotein/gui/dialogs/: __init__.py  export_dialog.py  settings_dialog.py
Alprotein/gui/widgets/: __init__.py  action_buttons_window.py  actions_panel.py  analysis_dashboard.py  calculation_panel.py  control_panel_3d.py  control_sidebar.py  data_table_widget.py  enhanced_results_panel.py  file_loader.py  hamiltonian_widget.py  parameters_panel.py  protein_viewer.py  (+5 more)
Alprotein/helper/: getting_charges_from_atoms.py
Alprotein/utils/: __init__.py  atom_level_cdc.py  calculate_exciton_distribution.py  calculations.py  cdc_analysis.py  pdb_writer.py
Alprotein/visualization/: __init__.py  protein_3d.py
docs/: CHANGELOG.md
docs/assets/: diagram.html
docs/gui-fixes/: CDC_ANALYSIS_FIXES.md  CDC_WORKFLOW_FIXES.md  COLOR_CONSISTENCY_FIX_2025.md  MVP_IMPLEMENTATION_SUMMARY.md  TEXT_COLOR_FIXES_SUMMARY.md
examples/: atom_charge_access_guide.py  basic_usage_enhanced.py  calculate_site_energies.py  complete_atom_level_example.py  corrected_charge_access.py  example_usage.py  migration_test.py  pigment_site_summary.py  quick_test.py  simple_charge_example.py  spectra_test_example.py  test_core_workflow_IsiA.py
examples/atom_cdc_results/: site_energy_shift_by_pigment.csv
examples/data/: CP24_extended_most_occ_pH8_site_energies.txt
tests/: conftest.py  test_actions_tab.py  test_core_workflow_CP29_Doran.py  test_core_workflow_IsiA.py  test_core_workflow_cp24.py  test_corrected_cdc.py  test_exciton_calculator.py  test_final.py  test_fixes.py  test_gui_imports.py  test_gui_quick.py  test_imports.py  test_imports_detailed.py  test_mvp.py  test_parameters.py  test_pdb_parser.py  test_protein_q00.py  test_warning_fix.py  test_workbench_imports.py
tools/: launch_workbench.py
(+14 files in other folders)
